fixed the margins and added invisible Button

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   --secondary: #68baa6;
   --success: #1d7c00;
   --danger: #e52733;
+  --blackish: #152028;
   --icon-filter: invert(22%) sepia(76%) saturate(3039%) hue-rotate(240deg)
     brightness(87%) contrast(90%);
+  --icon-filter-white: invert(99%) sepia(1%) saturate(1403%) hue-rotate(16deg)
+    brightness(113%) contrast(101%);
+  --icon-filter-blackish: invert(8%) sepia(13%) saturate(1770%)
+    hue-rotate(163deg) brightness(96%) contrast(92%);
 }
